Yhteystietojen refaktorointia.
Yhteystiedot-taulu, johon tallennetaan aikaisemmin
JSONB-möykyssä olleet yhteystiedot.