@@ -2,7 +2,7 @@ package fi.vm.sade.varda.rekisterointi.model;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.Collections;
+import java.util.Set;
 
 public class TestiRekisterointi {
 
@@ -15,11 +15,12 @@ public class TestiRekisterointi {
                 null,
                 Organisaatio.of("0000000-1", null, LocalDate.now(),
                         KielistettyNimi.of("Testiyritys", "fi", LocalDate.now()),
-                        "oy_foo_ab", Collections.singleton("tyyppi"), "Helsinki",
-                        "Suomi", Collections.emptySet()),
+                        "yritysmuoto_26", Set.of("organisaatiotyyppi_07"), "kunta_091",
+                        "maatjavaltiot1_fin", Set.of("oppilaitoksenopetuskieli_1#1"),
+                        Yhteystiedot.of("101234567", "testi@testiyritys.fi", Osoite.TYHJA, Osoite.TYHJA)),
                 "vardatoimintamuoto_tm01",
-                Collections.singleton("Helsinki"),
-                Collections.emptySet(),
+                Set.of("kunta_091"),
+                Set.of("testi@testiyritys.fi"),
                 kayttaja,
                 LocalDateTime.now(),
                 Rekisterointi.Tila.KASITTELYSSA
